--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Preject of Cinema website",
   "main": "src/server/index.js",
   "scripts": {
-    "srart": "node src/server/index.js",
+    "start": "node src/server/index.js",
     "server": "nodemon scr/server/index.js",
     "build": "webpack --mode production",
-    "client": "webpack-dev-server"
+    "client": "webpack-dev-server --mode development --hot --watch --color",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,21 +21,27 @@
   },
   "homepage": "https://github.com/Grumbash/CinemaVim#readme",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "ajv": "^6.5.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^3.6.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^4.0.0-alpha",
     "node-sass": "^4.9.1",
     "nodemon": "^1.17.5",
+    "react-hot-loader": "^4.3.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.0",
